--- a/index.css
+++ b/index.css
@@ -1,5 +1,10 @@
 body{
     margin: 0;
-    background-color: black;
-    color: white;
+}
+
+header{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 9999;
 }
