--- a/css/Home-1.css
+++ b/css/Home-1.css
@@ -792,7 +792,7 @@
 .u-section-4 .u-image-1 {
   min-height: 530px;
   pointer-events: auto;
-  background-image: url("Image/life2.jpg");
+  background-image: url("../Image/life2.jpg");
   background-position: 50% 50%;
 }
 
@@ -1513,7 +1513,7 @@
 }
 
 .u-section-7 .u-image-1 {
-  background-image: url("Image/church.jpg");
+  background-image: url("../Image/church.jpg");
   background-position: 100% 50%;
   min-height: 368px;
 }
@@ -1523,7 +1523,7 @@
 }
 
 .u-section-7 .u-image-2 {
-  background-image: url("Image/XeYamaha.jpg");
+  background-image: url("../Image/XeYamaha.jpg");
   background-position: 50% 50%;
   min-height: 368px;
 }
@@ -1533,7 +1533,7 @@
 }
 
 .u-section-7 .u-image-3 {
-  background-image: url("Image/DiDuDamCuoi.JPG");
+  background-image: url("../Image/DiDuDamCuoi.JPG");
   background-position: 50% 50%;
   min-height: 368px;
 }
@@ -1544,7 +1544,7 @@
 
 .u-section-7 .u-image-4 {
   min-height: 368px;
-  background-image: url("Image/CodeHome.jpg");
+  background-image: url("../Image/CodeHome.jpg");
   background-position: 50% 50%;
 }
 
@@ -1566,7 +1566,7 @@
 }
 
 .u-section-7 .u-image-5 {
-  background-image: url("Image/CodeJava.jpg");
+  background-image: url("../Image/CodeJava.jpg");
   background-position: 50% 50%;
   min-height: 368px;
 }
@@ -1577,7 +1577,7 @@
 
 .u-section-7 .u-image-6 {
   min-height: 368px;
-  background-image: url("Image/MonHoc.jpg");
+  background-image: url("../Image/MonHoc.jpg");
   background-position: 100% 50%;
 }
 
@@ -1587,7 +1587,7 @@
 
 .u-section-7 .u-image-7 {
   min-height: 368px;
-  background-image: url("Image/SNB.jpg");
+  background-image: url("../Image/SNB.jpg");
   background-position: 50% 50%;
 }
 
@@ -1597,7 +1597,7 @@
 
 .u-section-7 .u-image-8 {
   min-height: 368px;
-  background-image: url("Image/BanDoVietNam.jpg");
+  background-image: url("../Image/BanDoVietNam.jpg");
   background-position: 50% 50%;
 }
 
