--- a/css/Home-1.css
+++ b/css/Home-1.css
@@ -1533,7 +1533,7 @@
 }
 
 .u-section-7 .u-image-3 {
-  background-image: url("../Image/DiDuDamCuoi.JPG");
+  background-image: url("../Image/QuanPhuc.JPG");
   background-position: 50% 50%;
   min-height: 368px;
 }
